[gd_scene load_steps=14 format=3 uid="uid://ltmadlga84cg"]

[ext_resource type="Script" path="res://scene/Zombie_2.gd" id="1_awedt"]
[ext_resource type="Texture2D" uid="uid://b1ohjicbliwm1" path="res://assets/2d/Zombie.png" id="1_ni1ll"]
[ext_resource type="Script" path="res://script/MyHurtBox.gd" id="2_fwh2w"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mmh3x"]
size = Vector2(15, 27)

[sub_resource type="Animation" id="Animation_576e6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_lrgrx"]
resource_name = "attack"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [13, 14, 15, 16, 17, 18, 19]
}

[sub_resource type="Animation" id="Animation_n28w7"]
resource_name = "death"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [67, 68, 69, 70, 71, 72]
}

[sub_resource type="Animation" id="Animation_7eip4"]
resource_name = "hurt"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [65, 66, 67]
}

[sub_resource type="Animation" id="Animation_tcew5"]
resource_name = "idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_auwk0"]
resource_name = "run"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [26, 27, 28, 29, 30, 31, 32, 33]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8d16p"]
_data = {
"RESET": SubResource("Animation_576e6"),
"attack": SubResource("Animation_lrgrx"),
"death": SubResource("Animation_n28w7"),
"hurt": SubResource("Animation_7eip4"),
"idle": SubResource("Animation_tcew5"),
"run": SubResource("Animation_auwk0")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xiano"]
size = Vector2(12, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kqfv2"]
size = Vector2(82.5, 41)

[node name="Zombie_2" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_awedt")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(3.46541e-06, 0.79442, 0.919814, 1)
position = Vector2(0, -11)
texture = ExtResource("1_ni1ll")
hframes = 13
vframes = 6
region_rect = Rect2(0, 64, 256, 32)

[node name="MyHurtBox" type="Area2D" parent="Sprite2D"]
visible = false
position = Vector2(0, 11)
script = ExtResource("2_fwh2w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/MyHurtBox"]
position = Vector2(-2.5, -8.5)
shape = SubResource("RectangleShape2D_mmh3x")
debug_color = Color(0.5716, 0.542447, 0.341517, 0.42)

[node name="Platform_detection" type="RayCast2D" parent="Sprite2D"]
position = Vector2(12, 11)
target_position = Vector2(0, 12)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8d16p")
}
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -7)
shape = SubResource("RectangleShape2D_xiano")

[node name="Player_detection" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player_detection"]
position = Vector2(30.75, -15.5)
shape = SubResource("RectangleShape2D_kqfv2")

[connection signal="body_entered" from="Player_detection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="Player_detection" to="." method="_on_player_detection_body_exited"]
